<resources>
    <string name="app_name">Purificadora</string>
    <string name="password">Contraseña</string>
    <string name="login">Acceso</string>
    <string name="sing">Inscribirse</string>
    <string name="title_activity_home">Hogar</string>
    <string name="navigation_drawer_open">Cajón de navegación abierto</string>
    <string name="navigation_drawer_close">Cerrar cajón de navegación</string>
    <string name="spinner_title">Área seleccionada</string>

    <string name="pic_myslf">Recogerme</string>
    <string name="ename">Ingrese su nombre</string>
    <string name="ehouse">Ingrese la casa no</string>
    <string name="esociety">Entrar en la sociedad</string>
    <string name="elandmark">Ingrese Landmark</string>
    <string name="epincode">Ingrese a Pincode</string>
    <string name="epassword">Introducir la contraseña</string>
    <string name="econfirm">Ingresar Confirmar</string>
    <string name="mispassword">Contraseña de desajuste</string>
    <string name="applycou">Aplicar cupones</string>
    <string name="sorrycounpon">Lo siento, este código de cupón no se aplica</string>
    <string name="efeedback">Ingrese comentarios</string>
    <string name="giverating">Dar calificación</string>
    <string name="logout">Cerrar sesión</string>
    <string name="creditos">Cerrar sesión</string>

    <string name="excelimit">Excedió el límite</string>
    <string name="emobileno">Ingrese a móvil no</string>
    <string name="notification">Notificación</string>
    <string name="notificationdetails">Detalles de notificación</string>
    <string name="evalisemail">Ingrese un email valido</string>
    <string name="evalidmobile">Ingrese móvil válido</string>
    <string name="plaseselctrates">Tasas de selección de súplicas ..</string>
    <string name="referearn">referir y ganar</string>
    <string name="mobile_numberalreadyregistered">Número de móvil ya registrado</string>
    <string name="wallethistory">Historia de la billetera</string>
    <string name="wallet">Billetera</string>
    <string name="addressnotf">¡¡Dirección no encontrada!!</string>
    <string name="cartempty">Carro vacío</string>
    <string name="remove">  es eliminar</string>
    <string name="delete">Borrar</string>
    <string name="doyouwantdelete">Quieres borrar</string>
    <string name="cancel">Cancelar</string>
    <string name="items">  Unidades</string>
    <string name="placedordernow">Orden colocado ahora</string>
    <string name="mimiordervalof">Valor de pedido mínimo de</string>
    <string name="orderid">Orden ID:</string>
    <string name="areyousurecancel">¿Estás seguro de cancelar este pedido?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="itemx">  artículo X</string>
    <string name="updateareas">Actualice el nombre de su área. Porque no coincide con nuestra ubicación de entrega</string>
    <string name="plaseaddyour">Agregue su dirección</string>
    <string name="hello">Hola</string>
    <string name="seemore">Ver más</string>
    <string name="address_type">Estado</string>
    <string name="home_no">número</string>
    <string name="society">Colonia</string>
    <string name="area">Municipio / Alcaldia</string>
    <string name="landmark">Punto de referencia</string>
    <string name="pincode">Código Postal</string>
    <string name="save">Guardar</string>
    <string name="enter_new_password">Ingrese nueva clave</string>
    <string name="confirm_password">confirmar Contraseña</string>
    <string name="submit">Aceptar</string>
    <string name="please_take_a_minute_to_write_a_review">Tómese un minuto para escribir una reseña</string>
    <string name="type_feedback">Tipo de retroalimentación ..</string>
    <string name="enter_your_phone_number">Ingrese su número telefónico</string>
    <string name="we_will_send_you_the_6_digit_verification_code">Le enviaremos el código de verificación de 6 dígitos</string>
    <string name="country_code">Código de país</string>
    <string name="mobile_no">No móviles</string>
    <string name="generate_otp">Generar OTP</string>
    <string name="home">Home</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel_caffenio</string>

    <string name="my_wallet">Mi billetera</string>
    <string name="my_orders">Mis ordenes</string>
    <string name="my_address">Mi dirección</string>
    <string name="my_profile">Mi perfil</string>
    <string name="feedback">Comentario</string>
    <string name="contact_us">Contáctenos</string>
    <string name="refer_amp_earn">Cdata [referir y ganar</string>
    <string name="share">Compartir</string>
    <string name="about">Acerca de</string>
    <string name="terms_amp_conditions">Términos y condiciones</string>
    <string name="privacy_policy">política de privacidad</string>
    <string name="next">Siguiente</string>
    <string name="skip">Saltar</string>
    <string name="description">Descripción</string>
    <string name="continue_shopping">Seguir comprando</string>
    <string name="related_products">Productos relacionados</string>
    <string name="welcome_back">¡Bienvenido de nuevo!</string>
    <string name="log_in_to_your_existing_account">Inicie sesión en su cuenta existente</string>
    <string name="email_mobile_no">Número telefonico</string>
    <string name="forgot_password">Olvide mi contraseña</string>
    <string name="don_t_have_an_account">¿No tienes una cuenta?</string>
    <string name="order_id">Solicitar ID:</string>
    <string name="date">Fecha:</string>
    <string name="qty">Cantidad:</string>
    <string name="timeslot">Timeslot:</string>
    <string name="address">DIRECCIÓN:</string>
    <string name="subtotal">Total parcial:</string>
    <string name="delivery">Entrega:</string>
    <string name="tax">Impuesto:</string>
    <string name="total">Total:</string>
    <string name="wallet_discount">descuento de billetera</string>
    <string name="you_need_to_pickup_order_by_seller_shop_seller_address_">Debe recoger el pedido por la dirección del vendedor del vendedor que puede encontrar en la página de contacto</string>
    <string name="write_a_product_review">Escribir la reseña de un producto</string>
    <string name="tell_us_wh">Cuéntanos lo que te gusta o no te gusta de este producto</string>
    <string name="very_like_it">Muy parecido</string>
    <string name="good">Bien</string>
    <string name="not_good">No es bueno</string>
    <string name="email">Correo electrónico</string>
    <string name="mobile">Móvil</string>
    <string name="copy">Copiar</string>
    <string name="invite_friends_now">Invite a sus amigos ahora</string>
    <string name="select_your_area">Seleccione su área</string>
    <string name="let_s_get_started">¡Empecemos!</string>
    <string name="create_an_account_on_to_use_all_nthe_features">Cree una cuenta para usar todas las características</string>
    <string name="referral_code">Código de Referencia (Opcional)</string>
    <string name="by_signing_up_yo">Al registrarse, usted acepta nuestros términos y política</string>
    <string name="sign_up">SIGUIENTE</string>
    <string name="if_you_have_an_account">Si tienes una cuenta?</string>
    <string name="login_here">Entre aquí</string>
    <string name="refill_balance">Saldo de recarga</string>
    <string name="refill_amount">Cantidad de recarga:</string>
    <string name="payment_method">*Método de pago:</string>
    <string name="pay_now">Pagar ahora</string>
    <string name="search">Buscar..</string>
    <string name="add">Agregar</string>
    <string name="info">Información</string>
    <string name="add_another_address">Agrega otra dirección</string>
    <string name="total_item">Artículo total</string>
    <string name="totals">Totales:</string>
    <string name="order">Ordenar</string>
    <string name="stay_home_nfood_amp_groceries">quédate en casa \n alimento &amp; Groceries></string>
    <string name="view_all">Ver todo</string>
    <string name="want_to_shop_for">Quiero comprar</string>
    <string name="three_easy_steps">Tres sencillos pasos</string>
    <string name="order_directly_n">Ordene directamente \ desde la app</string>
    <string name="your_order_n_will_be">Su pedido \n será \ recibido por nuestra purificadora</string>
    <string name="your_door_n_to">Recibe en tu puerta \ sin salir de casa.</string>
    <string name="we_re_undergoing_a_bit_of">Estamos experimentando un poco de mantenimiento programado.</string>
    <string name="sorry_for_the_inconvenience">Lo siento por los inconvenientes ocasionados. Estaremos de copia de seguridad y ejecutando lo más rápido posible.</string>
    <string name="select_grocery_item">Selecciona la botella o garrafón de tu preferencia</string>
    <string name="order_grocery_and_get_delivery_in_the_fastest_ntime">Pide tu agua y obtenen la entrega más rápida de la ciudad con Purificadora de agua Saint Remi</string>
    <string name="order_directly_from_the_napplication">Ordena directamente desde la app, rápido y fácil!</string>
    <string name="fresh_amp_best_quality">Servicio a domicilio gratis </string>
    <string name="get_the_fastest_delivery">Ofrecemos calidad en todo momento</string>
    <string name="we_will_delivery">Purificadora de agua Saint Remi. \nEmpresa Mexicana conformada por jóvenes emprendedores, cuyos valores enaltecen nuestra Patria.  </string>
    <string name="view_cart">Verlo</string>
    <string name="wallet_amount">Cantidad de billetera</string>
    <string name="discount">Descuento</string>
    <string name="my_current_address">Mi dirección actual</string>
    <string name="change">Cambiar</string>
    <string name="place_order">Realizar pedido</string>
    <string name="congratulation">¡Felicitaciones!</string>
    <string name="thank_you_for">Gracias por ordenar. Recibimos su \ norder y comenzaremos a procesarlo pronto.</string>
    <string name="track_your_or">Rastrea tu orden</string>
    <string name="delivery_by">Abrimos desde:</string>
    <string name="out_of_stock">Agotado</string>
    <string name="ends_in">Termina en</string>
    <string name="language">Idioma</string>
    <string name="servicetax">Impuesto de servicio(</string>



</resources>
